fix typo (configuartion-->configuration)

--- a/po/ar.po
+++ b/po/ar.po
@@ -7178,7 +7178,7 @@ msgid "Wireless network"
 msgstr "شبكه لا سلكيه"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "تكوين الشبكه"
 
 msgid "Wireless network connection setup"
