--- a/po/bg.po
+++ b/po/bg.po
@@ -6592,7 +6592,7 @@ msgid "Wireless network"
 msgstr "Безжична Мрежа"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Мрежова Конфигурация..."
 
 msgid "Wireless network connection setup"
