--- a/po/ca.po
+++ b/po/ca.po
@@ -7544,7 +7544,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Configuració del sintonitzador"
 
 msgid "Wireless network connection setup"
