--- a/po/cs.po
+++ b/po/cs.po
@@ -7446,7 +7446,7 @@ msgstr "Bezdrátová LAN"
 msgid "Wireless network"
 msgstr "Bezdrátová síť"
 
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Nastavení bezdrátové sítě..."
 
 msgid "Wireless network connection setup"
