--- a/po/da.po
+++ b/po/da.po
@@ -7931,7 +7931,7 @@ msgid "Wireless network"
 msgstr "Trådløst netværk"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Opsæt trådløs netværksforbindelse."
 
 msgid "Wireless network connection setup"
