--- a/po/el.po
+++ b/po/el.po
@@ -9408,7 +9408,7 @@ msgstr "Ασύρματο δίκτυο"
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Ρύθμιση σύνδεσης ασύρματου δικτύου."
 
 #
