--- a/po/en.po
+++ b/po/en.po
@@ -5058,8 +5058,8 @@ msgstr "Wireless LAN"
 msgid "Wireless network"
 msgstr "Wireless network"
 
-msgid "Wireless network configuartion..."
-msgstr "Wireless network configuartion..."
+msgid "Wireless network configuration..."
+msgstr "Wireless network configuration..."
 
 msgid "Wireless network state"
 msgstr "Wireless network state"
