--- a/po/es.po
+++ b/po/es.po
@@ -7894,7 +7894,7 @@ msgstr "Red Inalámbrica"
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Configuración de Red..."
 
 msgid "Wireless network connection setup"
