--- a/po/et.po
+++ b/po/et.po
@@ -6673,7 +6673,7 @@ msgid "Wireless network"
 msgstr "Traadita võrk"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Võrgu häälestamine"
 
 msgid "Wireless network connection setup"
