--- a/po/fa.po
+++ b/po/fa.po
@@ -6620,7 +6620,7 @@ msgid "Wireless network"
 msgstr "اسکن شبکه های بدون سیم"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "پیکربندی شبکه"
 
 msgid "Wireless network connection setup"
