--- a/po/fi.po
+++ b/po/fi.po
@@ -7851,7 +7851,7 @@ msgid "Wireless network"
 msgstr "Langaton verkko"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "WLAN-verkon asetukset."
 
 msgid "Wireless network connection setup"
