--- a/po/fr.po
+++ b/po/fr.po
@@ -6729,7 +6729,7 @@ msgid "Wireless network"
 msgstr "Réseau Sans Fil"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Configuration connexion réseau sans fil."
 
 msgid "Wireless network connection setup"
