--- a/po/fy.po
+++ b/po/fy.po
@@ -7764,7 +7764,7 @@ msgstr "Triidloas netwurk"
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Netwurk configuraasje"
 
 msgid "Wireless network connection setup"
