--- a/po/he.po
+++ b/po/he.po
@@ -7139,7 +7139,7 @@ msgid "Wireless network"
 msgstr "Wireless Network"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "...הגדרת רשת"
 
 msgid "Wireless network connection setup"
