--- a/po/hr.po
+++ b/po/hr.po
@@ -7566,7 +7566,7 @@ msgstr ""
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Konfiguracija Tunera"
 
 msgid "Wireless network connection setup"
