--- a/po/hu.po
+++ b/po/hu.po
@@ -6794,7 +6794,7 @@ msgid "Wireless network"
 msgstr "Vezeték nélküli hálózat"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Vezeték nélküli hálózat beállítása."
 
 msgid "Wireless network connection setup"
