--- a/po/is.po
+++ b/po/is.po
@@ -7594,7 +7594,7 @@ msgid "Wireless network"
 msgstr "Þráðlaust netkerfi"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Uppsetning á þráðlausu neti."
 
 msgid "Wireless network connection setup"
