--- a/po/it.po
+++ b/po/it.po
@@ -7836,7 +7836,7 @@ msgid "Wireless network"
 msgstr "Rete wireless"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Configurazione connessione rete wireless."
 
 msgid "Wireless network connection setup"
