--- a/po/lt.po
+++ b/po/lt.po
@@ -6685,7 +6685,7 @@ msgid "Wireless network"
 msgstr "Belaidis tinklas"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Belaidžio tinklo prisijungimo nustatymas."
 
 msgid "Wireless network connection setup"
