--- a/po/lv.po
+++ b/po/lv.po
@@ -7847,7 +7847,7 @@ msgstr "Bezvadu tīkls"
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Tīkla konfigurācija..."
 
 msgid "Wireless network connection setup"
