--- a/po/nl.po
+++ b/po/nl.po
@@ -6822,7 +6822,7 @@ msgid "Wireless network"
 msgstr "Draadloos netwerk"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Installatie van het draadloos netwerk."
 
 msgid "Wireless network connection setup"
