--- a/po/no.po
+++ b/po/no.po
@@ -7690,7 +7690,7 @@ msgstr "Trådløst Nettverk"
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Nettverkskonfigurasjon"
 
 msgid "Wireless network connection setup"
