--- a/po/pl.po
+++ b/po/pl.po
@@ -7500,7 +7500,7 @@ msgid "Wireless network"
 msgstr "Sieć bezprzewodowa"
 
 #
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Konfiguracja sieci bezprzewodowej..."
 
 #
