--- a/po/pt.po
+++ b/po/pt.po
@@ -7887,7 +7887,7 @@ msgid "Wireless network"
 msgstr "Rede sem fios"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Opções da Rede sem fios."
 
 msgid "Wireless network connection setup"
