--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -6086,7 +6086,7 @@ msgstr ""
 msgid "Wireless network"
 msgstr ""
 
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr ""
 
 msgid "Wireless network connection setup"
