--- a/po/ro.po
+++ b/po/ro.po
@@ -6603,7 +6603,7 @@ msgid "Wireless network"
 msgstr "Wireless Network"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Configurare retea..."
 
 msgid "Wireless network connection setup"
