--- a/po/ru.po
+++ b/po/ru.po
@@ -7843,7 +7843,7 @@ msgstr "Беспроводная сеть"
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Конфигурация сети..."
 
 msgid "Wireless network connection setup"
