--- a/po/sk.po
+++ b/po/sk.po
@@ -6664,7 +6664,7 @@ msgid "Wireless network"
 msgstr "Bezdrôtová sieť"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Nastavenie bezdrôtovej siete."
 
 msgid "Wireless network connection setup"
