--- a/po/sl.po
+++ b/po/sl.po
@@ -8017,7 +8017,7 @@ msgid "Wireless network"
 msgstr "Brezžično omrežje"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Nastavitve brezzične povezave."
 
 msgid "Wireless network connection setup"
