--- a/po/sr.po
+++ b/po/sr.po
@@ -7922,7 +7922,7 @@ msgstr "Bežična mreža"
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Mrežna konfiguracija..."
 
 msgid "Wireless network connection setup"
