--- a/po/sv.po
+++ b/po/sv.po
@@ -7657,7 +7657,7 @@ msgstr "Trådlöst LAN"
 msgid "Wireless network"
 msgstr "Trådlöst Nätverk"
 
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Trådlös nätverksinställning."
 
 msgid "Wireless network connection setup"
