--- a/po/th.po
+++ b/po/th.po
@@ -6593,7 +6593,7 @@ msgid "Wireless network"
 msgstr "เครือข่ายไร้สาย"
 
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "ตั้งค่าเครือข่าย..."
 
 msgid "Wireless network connection setup"
