--- a/po/tr.po
+++ b/po/tr.po
@@ -7874,7 +7874,7 @@ msgstr "Kablosuz Ağ"
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Ağ Yapılandırması..."
 
 msgid "Wireless network connection setup"
