--- a/po/uk.po
+++ b/po/uk.po
@@ -7853,7 +7853,7 @@ msgstr "Безпровідна мережа"
 
 #
 #, fuzzy
-msgid "Wireless network configuartion..."
+msgid "Wireless network configuration..."
 msgstr "Конфігурація мережі..."
 
 msgid "Wireless network connection setup"
