fix typo (Weigthed-->Weighted)

--- a/po/ar.po
+++ b/po/ar.po
@@ -6902,7 +6902,7 @@ msgstr "الاربعاء"
 msgid "Weekday"
 msgstr "يوم الاسبوع"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 msgid ""
