--- a/po/bg.po
+++ b/po/bg.po
@@ -6320,7 +6320,7 @@ msgstr "Сряда"
 msgid "Weekday"
 msgstr "Делничен"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 msgid ""
