--- a/po/ca.po
+++ b/po/ca.po
@@ -7272,7 +7272,7 @@ msgstr "Dimecres"
 msgid "Weekday"
 msgstr "DiaSetmana"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 msgid ""
