--- a/po/cs.po
+++ b/po/cs.po
@@ -7223,7 +7223,7 @@ msgstr "Středa"
 msgid "Weekday"
 msgstr "Všední den "
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr "Vážená pozice"
 
 #
