--- a/po/da.po
+++ b/po/da.po
@@ -7642,7 +7642,7 @@ msgstr "Onsdag"
 msgid "Weekday"
 msgstr "Ugedag"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr "Vægtet position"
 
 #
