--- a/po/el.po
+++ b/po/el.po
@@ -9105,7 +9105,7 @@ msgstr "Τετάρτη"
 msgid "Weekday"
 msgstr "Ημέρα εβδομάδος"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 #
