--- a/po/en.po
+++ b/po/en.po
@@ -4982,8 +4982,8 @@ msgstr "Wednesday"
 msgid "Weekday"
 msgstr "Weekday"
 
-msgid "Weigthed position"
-msgstr "Weigthed position"
+msgid "Weighted position"
+msgstr "Weighted position"
 
 msgid ""
 "Welcome to the cutlist editor.\n"
