--- a/po/es.po
+++ b/po/es.po
@@ -7606,7 +7606,7 @@ msgstr "Miércoles"
 msgid "Weekday"
 msgstr "DiaSemana"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 #
