--- a/po/fi.po
+++ b/po/fi.po
@@ -7559,7 +7559,7 @@ msgstr "Keskiviikko"
 msgid "Weekday"
 msgstr "Viikonpäivä"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr "Painotettu sijainti"
 
 #
