--- a/po/fr.po
+++ b/po/fr.po
@@ -6448,7 +6448,7 @@ msgstr "Mercredi"
 msgid "Weekday"
 msgstr "Jours ouvrables"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr "Position pondérée"
 
 #, fuzzy
