--- a/po/he.po
+++ b/po/he.po
@@ -6863,7 +6863,7 @@ msgstr "יום רביעי"
 msgid "Weekday"
 msgstr "Weekday"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 msgid ""
