--- a/po/hr.po
+++ b/po/hr.po
@@ -7294,7 +7294,7 @@ msgstr "Srijeda"
 msgid "Weekday"
 msgstr "Tjedni dan"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 msgid ""
