--- a/po/hu.po
+++ b/po/hu.po
@@ -6496,7 +6496,7 @@ msgstr "Szerda"
 msgid "Weekday"
 msgstr "Hétköznap"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr "Kiegyensúlyzozott pozíció"
 
 #, fuzzy
