--- a/po/is.po
+++ b/po/is.po
@@ -7305,7 +7305,7 @@ msgstr "Miðvikudagur"
 msgid "Weekday"
 msgstr "Vikudagur"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 #
