--- a/po/lv.po
+++ b/po/lv.po
@@ -7556,7 +7556,7 @@ msgstr "Trešdiena"
 msgid "Weekday"
 msgstr "Nedēļas diena"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 #
