--- a/po/nl.po
+++ b/po/nl.po
@@ -6526,7 +6526,7 @@ msgstr "Woensdag"
 msgid "Weekday"
 msgstr "Dag van de week"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr "Gewogen positie"
 
 #, fuzzy
