--- a/po/no.po
+++ b/po/no.po
@@ -7416,7 +7416,7 @@ msgstr "Onsdag"
 msgid "Weekday"
 msgstr "Ukedag"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 msgid ""
