--- a/po/pl.po
+++ b/po/pl.po
@@ -7277,7 +7277,7 @@ msgstr "Środa"
 msgid "Weekday"
 msgstr "Dzień tygodnia"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr "Pozycja ważona"
 
 #
