--- a/po/pt.po
+++ b/po/pt.po
@@ -7597,7 +7597,7 @@ msgstr "Quarta-Feira"
 msgid "Weekday"
 msgstr "Dia de Semana"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr "Posição pesada"
 
 #
