--- a/po/sk.po
+++ b/po/sk.po
@@ -6385,7 +6385,7 @@ msgstr "Streda"
 msgid "Weekday"
 msgstr "Pracovný deň"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 #, fuzzy
