--- a/po/sr.po
+++ b/po/sr.po
@@ -7632,7 +7632,7 @@ msgstr "Sreda"
 msgid "Weekday"
 msgstr "Nedeljnii dan"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr ""
 
 #
