--- a/po/sv.po
+++ b/po/sv.po
@@ -7293,7 +7293,7 @@ msgstr "Onsdag"
 msgid "Weekday"
 msgstr "Veckodag"
 
-msgid "Weigthed position"
+msgid "Weighted position"
 msgstr "Uppskattad position"
 
 #
