fix typo (occured-->occurred)

--- a/po/ar.po
+++ b/po/ar.po
@@ -751,7 +751,7 @@ msgstr "غير مسموح بملف بدون اسم"
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "حدث خطا اثناء تحميل قائمة الحزم. من فضلك حاول ثانيه"
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "حدث خطأ غير معروف !"
 
 msgid "Any activity"
