--- a/po/bg.po
+++ b/po/bg.po
@@ -651,7 +651,7 @@ msgstr "Файл без име не се приема."
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Грешка при изтегляне на списъка с пакети! Опитайте отново."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Случи се непозната грешка!"
 
 msgid "Any activity"
