--- a/po/cs.po
+++ b/po/cs.po
@@ -762,7 +762,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Chyba při stahování seznamu balíčků. Prosím, zkuste to znovu."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Vyskytla se neznámá chyba!"
 
 msgid "Any activity"
