--- a/po/da.po
+++ b/po/da.po
@@ -769,7 +769,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Der opstod en fejl under download af pakkelisten. Prøv venligst igen."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Der opstod en ukendt fejl!"
 
 msgid "Any activity"
