--- a/po/en.po
+++ b/po/en.po
@@ -587,8 +587,8 @@ msgstr "An empty filename is illegal."
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "An error occurred while downloading the packetlist. Please try again."
 
-msgid "An unknown error occured!"
-msgstr "An unknown error occured!"
+msgid "An unknown error occurred!"
+msgstr "An unknown error occurred!"
 
 msgid "Any activity"
 msgstr "Any activity"
