--- a/po/et.po
+++ b/po/et.po
@@ -660,7 +660,7 @@ msgstr "Tühi failinimi ei ole lubatud."
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Viga nimekirja allalaadimisel.Palun proovi uuesti."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Tundmatu viga!"
 
 msgid "Any activity"
