--- a/po/fa.po
+++ b/po/fa.po
@@ -664,7 +664,7 @@ msgstr "بدون نام بودن برای یک فایل غیر مجاز است"
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr ""
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "خطای نامشخصی رخ داد"
 
 msgid "Any activity"
