--- a/po/fr.po
+++ b/po/fr.po
@@ -667,7 +667,7 @@ msgstr "Un nom de fichier vide est illégal."
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Erreur de téléchargement de la liste paquet! Veuillez réessayer."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Une erreur inconnue est survenue!"
 
 msgid "Any activity"
