--- a/po/fy.po
+++ b/po/fy.po
@@ -757,7 +757,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr ""
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "In unbekende flater !"
 
 msgid "Any activity"
