--- a/po/he.po
+++ b/po/he.po
@@ -722,7 +722,7 @@ msgstr "קובץ ריק לא חוקי"
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "There was an error downloading the packetlist. Please try again."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "! אירעה שגיאה לא ידועה"
 
 msgid "Any activity"
