--- a/po/hu.po
+++ b/po/hu.po
@@ -685,7 +685,7 @@ msgstr ""
 "A szoftvercsomag-lista letöltése hiba miatt lehetetlen. Kérem, próbálja meg "
 "újra."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Ismeretlen hiba keletkezett!"
 
 msgid "Any activity"
