--- a/po/is.po
+++ b/po/is.po
@@ -745,7 +745,7 @@ msgstr "Það þarf að vera skráarnafn."
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Það varð villa við niðurhal pakka listans. Vinsamlega prófaðu aftur."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Óþekkt villa varð!"
 
 msgid "Any activity"
