--- a/po/it.po
+++ b/po/it.po
@@ -778,7 +778,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Errore download elenco pacchetti! Riprovare."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Si è verificato un errore sconosciuto!"
 
 msgid "Any activity"
