--- a/po/lt.po
+++ b/po/lt.po
@@ -661,7 +661,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr ""
 "Įvyko klaida, parsisiunčiant paketo sąrašą. Prašome pabandyti dar kartą."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Įvyko nežinoma klaida!"
 
 msgid "Any activity"
