--- a/po/nl.po
+++ b/po/nl.po
@@ -685,7 +685,7 @@ msgstr ""
 "Er is een fout opgetreden bij het downloaden van de pakketlijst. Probeer het "
 "opnieuw."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Er heeft zich een onbekende fout voorgedaan!"
 
 msgid "Any activity"
