--- a/po/pl.po
+++ b/po/pl.po
@@ -759,7 +759,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Wystąpił błąd podczas pobierania listy pakietów. Spróbuj ponownie."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Wystąpił nieznany błąd!"
 
 #
