--- a/po/pt.po
+++ b/po/pt.po
@@ -765,7 +765,7 @@ msgstr ""
 "novo."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Ocorreu um erro desconhecido!"
 
 msgid "Any activity"
