--- a/po/ro.po
+++ b/po/ro.po
@@ -660,7 +660,7 @@ msgstr ""
 "A intervenit o eroare in timpul descarcarii listei. Va rugam incercati din "
 "nou."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "S-a produs o eroare necunoscuta!"
 
 msgid "Any activity"
