--- a/po/ru.po
+++ b/po/ru.po
@@ -763,7 +763,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Ошибка загрузки списка пактов. Пожалуйста, попробуйте еще раз."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Неизвестная ошибка!"
 
 msgid "Any activity"
