--- a/po/sk.po
+++ b/po/sk.po
@@ -669,7 +669,7 @@ msgstr "Prázdny názov súboru je neplatný."
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Chyba pri sťahovaní zoznamu paketov. Zopakujte."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Objavila sa neznáma chyba!"
 
 msgid "Any activity"
