--- a/po/sl.po
+++ b/po/sl.po
@@ -786,7 +786,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Prišlo je do napake pri prenosu liste paketov. Poskusite ponovno."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Pojavila se je neznana napaka!"
 
 msgid "Any activity"
