--- a/po/sr.po
+++ b/po/sr.po
@@ -788,7 +788,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Greška kod skidanja liste paketa. Molimo pokušajte ponovo."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Nepoznata greška se desila"
 
 msgid "Any activity"
