--- a/po/sv.po
+++ b/po/sv.po
@@ -762,7 +762,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Ett fel uppstod vid nedladdning av paketlistan. Vänligen prova igen."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Ett okänt fel uppstod!"
 
 msgid "Any activity"
