--- a/po/th.po
+++ b/po/th.po
@@ -652,7 +652,7 @@ msgstr "ชื่อไฟล์ห้ามเป็นช่องว่าง
 msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "พบข้อผิดพลาด ไม่สามารถดาวน์โหลดรายการของส่วนประกอบได้ กรุณาลองซ้ำอีกครั้ง...."
 
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "เกิดข้อผิดพลาดขึ้น!"
 
 msgid "Any activity"
