--- a/po/tr.po
+++ b/po/tr.po
@@ -770,7 +770,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Paket listesi indirilirken hata oluştu. Lütfen tekrar deneyin."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Bilinmeyen bir hata oluştu!"
 
 msgid "Any activity"
