--- a/po/uk.po
+++ b/po/uk.po
@@ -773,7 +773,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Виникла помилка при завантаженні списку пакетів. Спробуйте ще раз."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Виникла невідома помилка!"
 
 msgid "Any activity"
