--- a/po/ca.po
+++ b/po/ca.po
@@ -745,7 +745,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr ""
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr ""
 
 msgid "Any activity"
