--- a/po/es.po
+++ b/po/es.po
@@ -782,7 +782,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Hay un error descargando la lista de paquetes. Intente de nuevo."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "¡Ocurrió un error desconocido!"
 
 msgid "Any activity"
