--- a/po/fi.po
+++ b/po/fi.po
@@ -761,7 +761,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr "Virhe ladattaessa IPKG-ohjelmapakettiluetteloa. Yritä uudestaan."
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Tuntematon virhe!"
 
 msgid "Any activity"
