--- a/po/lv.po
+++ b/po/lv.po
@@ -780,7 +780,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr ""
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr "Nezināma kļūda!"
 
 msgid "Any activity"
