--- a/po/no.po
+++ b/po/no.po
@@ -755,7 +755,7 @@ msgid "An error occurred while downloading the packetlist. Please try again."
 msgstr ""
 
 #
-msgid "An unknown error occured!"
+msgid "An unknown error occurred!"
 msgstr ""
 
 msgid "Any activity"
