fix typo (secundary-->secondary)

--- a/po/da.po
+++ b/po/da.po
@@ -1577,7 +1577,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "skift til næste undertekst sprog"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
