--- a/po/en.po
+++ b/po/en.po
@@ -6518,8 +6518,8 @@ msgstr "Configure the second audio language."
 msgid "Configure the second subtitle language."
 msgstr "Configure the second subtitle language."
 
-msgid "Configure the secundary EPG language."
-msgstr "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
+msgstr "Configure the secondary EPG language."
 
 msgid "Configure the skip time interval for the '1'/'3' buttons."
 msgstr "Configure the skip time interval for the '1'/'3' buttons."
