--- a/po/fy.po
+++ b/po/fy.po
@@ -1545,7 +1545,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "skeakelje nei de folgende undertiteling taal"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
