--- a/po/nl.po
+++ b/po/nl.po
@@ -1379,7 +1379,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "Volgende ondertitel taal"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
