--- a/po/no.po
+++ b/po/no.po
@@ -1534,7 +1534,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "bytt til neste tekstspråk"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
