--- a/po/pl.po
+++ b/po/pl.po
@@ -1525,7 +1525,7 @@ msgstr "Skonfiguruj język drugiej ścieżki audio."
 msgid "Configure the second subtitle language."
 msgstr "Skonfiguruj drugi język napisów."
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr "Skonfiguruj drugi język EPG."
 
 msgid "Configure the sharpness of the video scaling."
