--- a/po/ru.po
+++ b/po/ru.po
@@ -1564,7 +1564,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "переключиться на следующий язык субтитров"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
