--- a/po/sv.po
+++ b/po/sv.po
@@ -1558,7 +1558,7 @@ msgstr "Konfigurera det andra ljudspråket."
 msgid "Configure the second subtitle language."
 msgstr "Konfigurera det andra undertextspråket."
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr "Konfigurera det sekundära EPG språket."
 
 msgid "Configure the sharpness of the video scaling."
