--- a/po/ar.po
+++ b/po/ar.po
@@ -1481,7 +1481,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "الانتقال الى لغة العناوين الفرعيه التاليه"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
