--- a/po/bg.po
+++ b/po/bg.po
@@ -1336,7 +1336,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "превкл. на следващ език за субтитри"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
