--- a/po/cs.po
+++ b/po/cs.po
@@ -1523,7 +1523,7 @@ msgstr "Nastavuje druhý jazyk zvuku."
 msgid "Configure the second subtitle language."
 msgstr "Nastavuje druhý jazyk titulků."
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr "Nastavuje sekundárního jazyka EPG."
 
 msgid "Configure the sharpness of the video scaling."
