--- a/po/el.po
+++ b/po/el.po
@@ -1850,7 +1850,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "μετάβαση σε επόμενη γλώσσα υποτίτλων"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
