--- a/po/et.po
+++ b/po/et.po
@@ -1352,7 +1352,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "vali järgmine subtiiter"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
