--- a/po/fi.po
+++ b/po/fi.po
@@ -1563,7 +1563,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "vaihda seuraavalle tekstityskielelle"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
