--- a/po/fr.po
+++ b/po/fr.po
@@ -1361,7 +1361,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "basculer vers le langage sous-titre suivant"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
