--- a/po/he.po
+++ b/po/he.po
@@ -1451,7 +1451,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "העבר לשפת תרגום הבאה"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
