--- a/po/is.po
+++ b/po/is.po
@@ -1449,7 +1449,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "skipta á næsta undirtexta"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
