--- a/po/it.po
+++ b/po/it.po
@@ -1577,7 +1577,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "Passare alla lingua sottotitoli successiva"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
