--- a/po/lt.po
+++ b/po/lt.po
@@ -1352,7 +1352,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "perjungti į kitą subtitrų kalbą"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
