--- a/po/lv.po
+++ b/po/lv.po
@@ -1580,7 +1580,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "iet uz nākamo subtitru valodu"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
