--- a/po/ro.po
+++ b/po/ro.po
@@ -1343,7 +1343,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "mergi la urmatoarea limba pentru subtitrari"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
