--- a/po/sk.po
+++ b/po/sk.po
@@ -1360,7 +1360,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "prepnúť na nasledujúci jazyk podtitulkov"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
