--- a/po/sr.po
+++ b/po/sr.po
@@ -1594,7 +1594,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "Prebaci na sledeći jezik titla"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
