--- a/po/th.po
+++ b/po/th.po
@@ -1341,7 +1341,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "เลือกซับไตเติ้ลต่อไป"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
