--- a/po/tr.po
+++ b/po/tr.po
@@ -1573,7 +1573,7 @@ msgstr ""
 msgid "Configure the second subtitle language."
 msgstr "sonraki alt yazı dilini seç"
 
-msgid "Configure the secundary EPG language."
+msgid "Configure the secondary EPG language."
 msgstr ""
 
 msgid "Configure the sharpness of the video scaling."
