nl.po: add missing plural forms translation

--- a/po/nl.po
+++ b/po/nl.po
@@ -5880,12 +5880,11 @@ msgstr "Update en herstart (aanbevolen)"
 msgid "Update channel list only"
 msgstr "Alleen de zenderlijst updaten"
 
-# Kon deze niet vertalen in PO edit
 #, python-format
 msgid "Update completed, %d package was installed."
 msgid_plural "Update completed, %d packages were installed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "De update is gereed, %d pakket geinstalleerd."
+msgstr[1] "De update is gereed, %d pakketten geinstalleerd."
 
 msgid "Update completed. Do you want to reboot your receiver?"
 msgstr "De update is gereed. Wilt u uw ontvanger herstarten?"
