nl.po: translation updates

--- a/po/nl.po
+++ b/po/nl.po
@@ -372,14 +372,14 @@ msgid ""
 "A finished record timer wants to set your\n"
 "receiver to standby. Do that now?"
 msgstr ""
-"Een opname die klaar is wil de ontvanger\n"
+"Een opname die gereed is wil de ontvanger\n"
 "in standby zetten. Wilt u dat?"
 
 msgid ""
 "A finished record timer wants to shut down\n"
 "your receiver. Shutdown now?"
 msgstr ""
-"Een opname die klaar is wil de ontvanger\n"
+"Een opname die gereed is wil de ontvanger\n"
 "uitschakelen. Wilt u dat?"
 
 msgid "A graphical EPG for all services of an specific bouquet"
@@ -921,7 +921,7 @@ msgid "Calculate all positions"
 msgstr "Bereken alle posities"
 
 msgid "Calculation complete"
-msgstr "Berekening klaar"
+msgstr "Berekening gereed"
 
 msgid "Calibrate"
 msgstr "Calibreren"
@@ -1133,7 +1133,7 @@ msgstr ""
 "Dit kan ingesteld worden van 1 tot 11 sec. Deze kan ook zichtbaar blijven totdat (opnieuw) op 'ok' gedrukt wordt. Kies dan voor 'geen timeout'. "
 
 msgid "Configure for how many minutes finished events should remain visible in the EPG. Useful when you need information about an event which has just finished, or has been delayed."
-msgstr "Configureer hoelang verlopen programma's zichtbaar moet blijven in de EPG. Dit is handig indien u informatie wenst over een programma wat net klaar is, of vertraagd is."
+msgstr "Configureer hoe lang afgelopen programma's zichtbaar moet blijven in de EPG. Dit is handig indien u informatie wenst over een programma wat net afgelopen is, of vertraagd is."
 
 msgid "Configure how recording filenames are constructed."
 msgstr "Configureer hoe de namen van opnames samengesteld worden."
@@ -7594,7 +7594,7 @@ msgstr "zapte"
 #~ msgstr "Niet vragen, gewoon verzenden"
 
 #~ msgid "Done - Installed or upgraded %d packages"
-#~ msgstr "Klaar - %d pakket(ten) geïnstalleerd of vervangen"
+#~ msgstr "Gereed - %d pakket(ten) geïnstalleerd of vervangen"
 
 #~ msgid "Edit Title"
 #~ msgstr "Wijzig titel"
