[Translations] EN_GB, fix.

--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9847,7 +9847,7 @@ msgid "romance"
 msgstr "romance"
 
 msgid "running..."
-msgstr "Scanning…"
+msgstr "running..."
 
 msgid "save last directory on exit"
 msgstr "save last directory on exit"
