--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ims\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-11-16 18:48+0100\n"
+"POT-Creation-Date: 2012-11-29 21:48+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims21@users.sourceforge.net>\n"
@@ -174,6 +174,13 @@ msgid "%a %e/%m  %-H:%M"
 msgstr ""
 
 #, python-format
+msgid "%d file"
+msgid_plural "%d files"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
+#, python-format
 msgid "%d hour"
 msgid_plural "%d hours"
 msgstr[0] "%d hodina"
@@ -181,9 +188,12 @@ msgstr[1] "%d hodiny"
 msgstr[2] "%d hodin"
 
 #
-#, python-format
-msgid "%d jobs are running in the background!"
-msgstr "%d úloh běží na pozadí!"
+#, fuzzy, python-format
+msgid "%d job is running in the background!"
+msgid_plural "%d jobs are running in the background!"
+msgstr[0] "%d úloh běží na pozadí!"
+msgstr[1] "%d úloh běží na pozadí!"
+msgstr[2] "%d úloh běží na pozadí!"
 
 #
 #, python-format
@@ -209,9 +219,12 @@ msgstr[1] "%d sekundy"
 msgstr[2] "%d sekund"
 
 #
-#, python-format
-msgid "%d services found!"
-msgstr "%d programů nalezeno!"
+#, fuzzy, python-format
+msgid "%d subdirectory"
+msgid_plural "%d subdirectories"
+msgstr[0] "Kořenový adresář"
+msgstr[1] "Kořenový adresář"
+msgstr[2] "Kořenový adresář"
 
 #
 #, python-format
@@ -530,10 +543,6 @@ msgstr "AA"
 #
 msgid "AB"
 msgstr "AB"
-
-#
-msgid "AC3 downmix"
-msgstr "AC3 downmix"
 
 msgid "AC3/DTS downmix"
 msgstr ""
@@ -1808,10 +1817,6 @@ msgid "DMM normal"
 msgstr "normální"
 
 #
-msgid "DTS downmix"
-msgstr ""
-
-#
 msgid "DUAL LAYER DVD"
 msgstr "DVOUVRSTVÉ DVD"
 
@@ -2010,8 +2015,8 @@ msgstr "Adresář %s neexistuje."
 msgid "Directory browser"
 msgstr "Prohlížeč adresářů"
 
-#, python-format
-msgid "Directory contains %d file(s) and %d sub-directories.\n"
+#, fuzzy, python-format
+msgid "Directory contains %s and %s."
 msgstr "Adresář obsahuje %d soubor(ů) a %d podadresář(ů).\n"
 
 #
@@ -2202,9 +2207,12 @@ msgid "Don't stop current event but disable coming events"
 msgstr "Nezastavovat aktuální událost, ale zakázat následující události"
 
 #
-#, python-format
-msgid "Done - Installed, upgraded or removed %d packages with %d errors"
-msgstr "Dokončeno - instalováno, aktualizováno nebo odstraněno: %d balíčků s %d chybami"
+#, fuzzy, python-format
+msgid "Done - Installed, upgraded or removed %d package (%s)"
+msgid_plural "Done - Installed, upgraded or removed %d packages (%s)"
+msgstr[0] "Dokončeno - instalováno, aktualizováno nebo odstraněno: %d balíčků s %d chybami"
+msgstr[1] "Dokončeno - instalováno, aktualizováno nebo odstraněno: %d balíčků s %d chybami"
+msgstr[2] "Dokončeno - instalováno, aktualizováno nebo odstraněno: %d balíčků s %d chybami"
 
 #
 msgid "Download"
@@ -2721,16 +2729,8 @@ msgid "General AC3 delay"
 msgstr "Hlavní AC3 zpoždění"
 
 #
-msgid "General AC3 delay (ms)"
-msgstr "Hlavní AC3 zpoždění (ms)"
-
-#
 msgid "General PCM delay"
 msgstr "Hlavní PCM zpoždění"
-
-#
-msgid "General PCM delay (ms)"
-msgstr "Hlavní PCM zpoždění (ms)"
 
 #
 msgid "Genre"
@@ -3323,9 +3323,12 @@ msgstr "Seznam záznamových zařízení"
 msgid "List type"
 msgstr "Typ seznamu"
 
-#, python-format
-msgid "List version %d, found %d channels"
-msgstr "Seznam verze %d, nalezeno %d kanálů"
+#, fuzzy, python-format
+msgid "List version %d, found %d channel"
+msgid_plural "List version %d, found %d channels"
+msgstr[0] "Seznam verze %d, nalezeno %d kanálů"
+msgstr[1] "Seznam verze %d, nalezeno %d kanálů"
+msgstr[2] "Seznam verze %d, nalezeno %d kanálů"
 
 #
 msgid "Listen to the radio..."
@@ -5171,9 +5174,19 @@ msgstr "Vyhledá v síti bezdrátové připojovací body a připojí se k nim za
 msgid "Scanning %s..."
 msgstr "Prohledává %s..."
 
-#, python-format
-msgid "Scanning completed, %d channels found"
-msgstr "Prohledávání dokončeno, bylo nalezeno %d programů "
+#, fuzzy, python-format
+msgid "Scanning - %d%% completed, %d channel found"
+msgid_plural "Scanning - %d%% completed, %d channels found"
+msgstr[0] "Prohledávání dokončeno, bylo nalezeno %d programů "
+msgstr[1] "Prohledávání dokončeno, bylo nalezeno %d programů "
+msgstr[2] "Prohledávání dokončeno, bylo nalezeno %d programů "
+
+#, fuzzy, python-format
+msgid "Scanning completed, %d channel found"
+msgid_plural "Scanning completed, %d channels found"
+msgstr[0] "Prohledávání dokončeno, bylo nalezeno %d programů "
+msgstr[1] "Prohledávání dokončeno, bylo nalezeno %d programů "
+msgstr[2] "Prohledávání dokončeno, bylo nalezeno %d programů "
 
 #
 msgid "Scanning failed!"
@@ -5886,10 +5899,6 @@ msgid "Standby"
 msgstr "Pohotovostní režim"
 
 #
-msgid "Standby / Restart"
-msgstr "Standby / Restart"
-
-#
 msgid "Standby / restart"
 msgstr "Standby / restart"
 
@@ -6165,10 +6174,6 @@ msgstr ""
 
 msgid "TV physical address report"
 msgstr "Ohlášení fyzické adresy TV"
-
-#
-msgid "TV system"
-msgstr "TV systém"
 
 msgid "TXT PID"
 msgstr ""
@@ -7401,8 +7406,9 @@ msgstr "Jestliže je povoleno, přijímač bude vybírat AC3 stopu (bude-li dost
 msgid "When enabled, use DHCP for the IP configuration."
 msgstr "Při povolení používá DHCP pro nastavení IP."
 
-msgid "When enabled, your TV will automatically select the SCART input when you switch on your receiver."
-msgstr "Jestliže je povoleno, TV bude automaticky vybírat SCART vstup při přepnutí na Váš přijímač. "
+#, fuzzy
+msgid "When enabled, your receiver will detect activity on the VCR SCART input."
+msgstr "Jestliže je povoleno, přijímač bude vybírat AC3 stopu (bude-li dostupná)."
 
 msgid "When nonzero, a recording will start earlier than the starting time indicated by the EPG."
 msgstr "Při nenulové hodnotě nahrávání začne dříve, než je čas začátku uvedený v EPG. "
@@ -8573,15 +8579,6 @@ msgid "save playlist on exit"
 msgstr "Při ukončení uložit playlist"
 
 #
-msgid "scan done!"
-msgstr "Prohledávání dokončeno!"
-
-#
-#, python-format
-msgid "scan in progress - %d%% done!"
-msgstr "Probíhá prohledávání - %d%% dokončeno!"
-
-#
 msgid "scan state"
 msgstr "stav prohledávání"
 
@@ -8873,6 +8870,13 @@ msgstr "zimní sporty"
 msgid "wireless network interface"
 msgstr "bezdrátový síťový adaptér"
 
+#, python-format
+msgid "with %d error"
+msgid_plural "with %d errors"
+msgstr[0] ""
+msgstr[1] ""
+msgstr[2] ""
+
 #
 msgid "working"
 msgstr "pracuji"
@@ -8897,3 +8901,37 @@ msgstr "přepnout"
 msgid "zapped"
 msgstr "přepnutý"
 
+#
+#~ msgid "%d services found!"
+#~ msgstr "%d programů nalezeno!"
+
+#
+#~ msgid "AC3 downmix"
+#~ msgstr "AC3 downmix"
+
+#
+#~ msgid "General AC3 delay (ms)"
+#~ msgstr "Hlavní AC3 zpoždění (ms)"
+
+#
+#~ msgid "General PCM delay (ms)"
+#~ msgstr "Hlavní PCM zpoždění (ms)"
+
+#
+#~ msgid "Standby / Restart"
+#~ msgstr "Standby / Restart"
+
+#
+#~ msgid "TV system"
+#~ msgstr "TV systém"
+
+#~ msgid "When enabled, your TV will automatically select the SCART input when you switch on your receiver."
+#~ msgstr "Jestliže je povoleno, TV bude automaticky vybírat SCART vstup při přepnutí na Váš přijímač. "
+
+#
+#~ msgid "scan done!"
+#~ msgstr "Prohledávání dokončeno!"
+
+#
+#~ msgid "scan in progress - %d%% done!"
+#~ msgstr "Probíhá prohledávání - %d%% dokončeno!"
